# Sitgrep

./: .gitignore  Dockerfile  README.md  install.py  pyproject.toml  requirements.txt
.igf/data/: data.db
src/: sitgrep.py
src/agent/: agent.py  model.py
src/agent/agents/: engineer.py  judge.py  types.py
src/config/: .sources.json  sources.json
src/docker/: main.py
src/docker/static/css/: sitgrep.css
src/docker/static/js/: dashboard.js  dataHandlers.js  export.js  filter.js  nav.js  paginator.js  renderer.js  restore.js  sitgrep.js  utils.js
src/docker/templates/: template.html  upload.html
src/rules/bureauveritascybersecurity/: dangerous-paddle-wget-download.yml  detect-hardcoded-password.yaml  ssm-send-command.yaml  weak-random-javascript.yaml
src/rules/local/: dangerous-paddle-wget-download.yml  detect-security-keywords.yaml  weak-random-javascript.yaml
src/utils/: archive_handler.py  logging.py  messages.py  progressbar.py  rulefetcher.py  source_handler.py
src/web/static/css/: sitgrep.css
src/web/static/js/: dashboard.js  dataHandlers.js  delete.js  export.js  filter.js  paginator.js  renderer.js  restore.js  sitgrep.js  sort.js  stateHandlers.js  utils.js
src/web/templates/: template.html  upload.html
