[project]
name = "sitgrep"
version = "3.8.2"
description = "Enhance your code review with Sitgrep"
authors = [
    { name = "John Ascher", email = "john.ascher@bureauveritas.com" }
]
maintainers = [
  { name = "John Ascher", email = "john.ascher@bureauveritas.com" }
]
readme = "README.md"
dependencies = [
    "gitpython>=3.1.43",
    "packaging>=24.0",
    "PyYAML",
    "rich",
    "numpy",
    "rs-chardet",
    "validators",
    "py7zr",
    "rarfile",
    "rich-argparse",
    "requests",
    "ollama",
    "langchain-ollama",
    "psutil",
    "langchain", 
    "langchain-community", 
    "langchain-core"
  ]
requires-python = ">=3.7.16"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
sitgrep = "sitgrep:cli"
